--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lezione del 10/07/2023</title>
+    <title>To do List</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
