--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </body>
 <script src="./model/to-do.js"></script>
 <script src="./model/manager.js"></script>
+<script src="./services/db-service.js"></script>
 <script src="./services/data-service.js"></script>
 <script src="./services/storage-service.js"></script>
 <script src="./main.js"></script>
